--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=demo
 server.port=8080
 spring.web.resources.static-locations=classpath:/static/
+spring.mvc.hiddenmethod.filter.enabled=true
 
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/spring?serverTimezone=Asia/Seoul
