--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,12 @@ server.port=8080
 spring.web.resources.static-locations=classpath:/static/
 spring.mvc.hiddenmethod.filter.enabled=true
 
+# Multipart File Upload Configuration
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=src/main/resources/static/upload/
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.max-file-size=10MB
+
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/spring?serverTimezone=Asia/Seoul
 spring.datasource.username=root
